--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -13,16 +13,13 @@
         -->
         <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
           <p class="text-align-left">
-            Hi! I am an MIT Research Intern with an M.Sc. Informatics from TU Munich.
+            Hi! I am an incoming PhD student at MIT with an M.Sc. Informatics from TU Munich.
             <br>
-            My current research is on geometric DL for protein binding with Dr. <a
-            href="https://people.csail.mit.edu/oct/" target="_blank"
-            class="link-style-green">Octavian Ganea</a> in Prof. <a
-            href="https://www.regina.csail.mit.edu/" target="_blank" class="link-style-green">Regina Barzilay's</a> and
+            I work on graph/geometric machine learning and self-supervised learning, often with applications to proteins and smaller molecules.
+            At MIT CSAIL I'll be advised by
             Prof. <a href="http://people.csail.mit.edu/tommi/" target="_blank"
-                     class="link-style-green">Tommi Jaakkola's</a> group.
-            My main interests are geometric deep learning, graphs, and self-supervised
-            learning.
+                     class="link-style-green">Tommi Jaakkola</a> and Prof. <a
+            href="https://www.regina.csail.mit.edu/" target="_blank" class="link-style-green">Regina Barzilay</a>.
             <br>
             Consider joining my weekly <a [routerLink]="['logag-reading-group']" class="link-style-green">reading
             group</a>
@@ -56,9 +53,9 @@
               <fa-icon class="link-icon-style-green" [icon]="youtube"></fa-icon>
               YouTube
             </a>
-            <a class="socials-links link-style-black text-black" href="mailto:hannes.staerk@gmail.com">
+            <a class="socials-links link-style-black text-black" href="mailto:hstark@mit.edu">
               <fa-icon class="link-icon-style-green" [icon]="mail"></fa-icon>
-              hannes.staerk@gmail.com
+              hstark@mit.edu
             </a>
           </div>
         </div>
