--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -109,7 +109,12 @@
                 Hannes Stärk*, Octavian-Eugen Ganea*, Lagnajit Pattanaik, Regina Barzilay, Tommi Jaakkola
 
                     <fa-icon class="icon-right-margin--left" [icon]="book"></fa-icon>
-                    <i>Under review.</i>
+              </p>
+              <p class="item-content">
+                <i>Under review. Also accepted at <a href="https://gt-rl.github.io/" target="_blank"
+                                                     class="link-style-green">ICLR'22 GTRL</a> and <a
+                  href="https://www.mldd-workshop.org/" target="_blank"
+                  class="link-style-green">ICLR'22 MLDD</a>. </i>
               </p>
               <div fxLayout="column" fxLayoutGap="5px">
                 <div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="center center">
