--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -156,8 +156,8 @@
               <p class="paragraph">
                 <a class="slight-bold">Resources:</a>
                 Their <a class="item-subtitle link-style-black"
-                                   href="https://hannes-stark.com/assets/.pdf"
-                                   target="_blank">slides</a> are coming soon. (96 participants)
+                                   href="https://hannes-stark.com/assets/final_reading_group_slides.pdf"
+                                   target="_blank">slides</a> (96 participants)
               </p>
               <p class="paragraph">
                 <a class="slight-bold">Speaker:</a>
@@ -497,8 +497,8 @@
               <p class="paragraph">
                 <a class="slight-bold">Resources:</a>
                 Their <a class="item-subtitle link-style-black"
-                                   href="https://hannes-stark.com/assets/.pdf"
-                                   target="_blank">slides</a> are coming soon. (96 participants)
+                                   href="https://hannes-stark.com/assets/final_reading_group_slides.pdf"
+                                   target="_blank">slides</a>. (96 participants)
               </p>
               <p class="paragraph">
                 <a class="slight-bold">Speaker:</a>
@@ -563,7 +563,7 @@
               <p class="paragraph">
                 <a class="slight-bold">Resources:</a>
                 Prof. Dehmamy's <a class="item-subtitle link-style-black"
-                                   href="https://hannes-stark.com/assets/DF-LT.pdf"
+                                   href="https://hannes-stark.com/assets/L-conv-Long2-Automatic Symmetry Discovery with Lie Algebra Convolutional Network.pdf"
                                    target="_blank">slides</a> are coming soon. (81 participants)
               </p>
               <p class="paragraph">
