--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -156,8 +156,8 @@
               <p class="paragraph">
                 <a class="slight-bold">Resources:</a>
                 Their <a class="item-subtitle link-style-black"
-                                   href="https://hannes-stark.com/assets/final_reading_group_slides.pdf"
-                                   target="_blank">slides</a> (96 participants)
+                         href="https://hannes-stark.com/assets/final_reading_group_slides.pdf"
+                         target="_blank">slides</a> (96 participants)
               </p>
               <p class="paragraph">
                 <a class="slight-bold">Speaker:</a>
@@ -218,55 +218,6 @@
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
-                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2202.13060"
-                   target="_blank">
-                  Graph Attention Retrospective (2022)
-                </a></h3>
-            </div>
-            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
-              <div>
-                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                19th of April 2022
-              </div>
-              <div>
-                <a>
-                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Kimon Fountoulakis, Amit Levi, Shenghao Yang, Aseem Baranwal, Aukosh Jagannath
-                </a>
-              </div>
-            </div>
-            <p class="paragraph">
-              <a class="slight-bold">Speaker:</a>
-              First author Professor <a
-              class="item-subtitle link-style-black"
-              href="https://opallab.ca/team/"
-              target="_blank">Kimon Fountoulakis</a> who works at the University of Waterloo and previously did a
-              PostDoc at Berkeley after finishing his PhD at University of Edinburgh with Prof. Gondzio.
-            </p>
-            <p class="no-margin">
-              <a class="slight-bold">Abstract:</a>
-              Graph-based learning is a rapidly growing sub-field of machine learning with applications in social
-              networks, citation networks, and bioinformatics. One of the most popular type of models is graph attention
-              networks. These models were introduced to allow a node to aggregate information from the features of
-              neighbor nodes in a non-uniform way in contrast to simple graph convolution which does not distinguish the
-              neighbors of a node. In this paper, we study theoretically this expected behaviour of graph attention
-              networks. We prove multiple results on the performance of the graph attention mechanism for the problem of
-              node classification for a contextual stochastic block model. Here the features of the nodes are obtained
-              from a mixture of Gaussians and the edges from a stochastic block model where the features and the edges
-              are coupled in a natural way. First, we show that in an "easy" regime, where the distance between the
-              means of the Gaussians is large enough, graph attention maintains the weights of intra-class edges and
-              significantly reduces the weights of the inter-class edges. As a corollary, we show that this implies
-              perfect node classification independent of the weights of inter-class edges. However, a classical argument
-              shows that in the "easy" regime, the graph is not needed at all to classify the data with high
-              probability. In the "hard" regime, we show that every attention mechanism fails to distinguish intra-class
-              from inter-class edges. We evaluate our theoretical results on synthetic and real-world data.
-            </p>
-          </div>
-
-          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
-          <div class="item" fxLayout="column">
-            <div fxLayout="row">
-              <h3>
                 <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2110.02096"
                    target="_blank">
                   Top-N: Equivariant set and graph generation without exchangeability (ICLR 2022)
@@ -312,23 +263,60 @@
           </div>
 
           <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
-
           <div class="item" fxLayout="column">
             <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2204.05249"
+                   target="_blank">
+                  Learning Local Equivariant Representations for Large-Scale Atomistic Dynamics
+                </a></h3>
             </div>
             <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
               <div>
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 3rd of May 2022
               </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Albert Musaelian, Simon Batzner, Anders Johansson, Lixin Sun, Cameron J. Owen, Mordechai Kornbluth, Boris Kozinsky
+                </a>
+              </div>
             </div>
             <p class="paragraph">
               <a class="slight-bold">Speaker:</a>
-              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
-              interested in presenting his work then just write me a message on
-              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
-                 class="link-style-green">Slack</a>
-              or via email!
+              The authors <a
+              class="item-subtitle link-style-black"
+              href="https://simonbatzner.github.io/"
+              target="_blank">Simon Batzner</a> and <a
+              class="item-subtitle link-style-black"
+              href="https://bkoz.seas.harvard.edu/news/doe-csgf-albert-musaelian"
+              target="_blank">Albert Musaelian</a>. Simon is 3rd year PhD student at Harvard interested in how
+              to leverage Deep Learning to advance Molecular Simulation. Prior to joining Harvard, he obtained a
+              Master’s Degree from MIT and spent a year conducting research at the NASA Armstrong Research Center.
+              Albert Musaelian is a second-year PhD student in the MIR group at Harvard and a Department of Energy
+              Computational Science Graduate Fellow. He works on the design of machine learning techniques for
+              atomic-scale modeling.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              A simultaneously accurate and computationally efficient parametrization of the energy and atomic forces of
+              molecules and materials is a long-standing goal in the natural sciences. In pursuit of this goal, neural
+              message passing has lead to a paradigm shift by describing many-body correlations of atoms through
+              iteratively passing messages along an atomistic graph. This propagation of information, however, makes
+              parallel computation difficult and limits the length scales that can be studied. Strictly local
+              descriptor-based methods, on the other hand, can scale to large systems but do not currently match the
+              high accuracy observed with message passing approaches. This work introduces Allegro, a strictly local
+              equivariant deep learning interatomic potential that simultaneously exhibits excellent accuracy and
+              scalability of parallel computation. Allegro learns many-body functions of atomic coordinates using a
+              series of tensor products of learned equivariant representations, but without relying on message passing.
+              Allegro obtains improvements over state-of-the-art methods on the QM9 and revised MD-17 data sets. A
+              single tensor product layer is shown to outperform existing deep message passing neural networks and
+              transformers on the QM9 benchmark. Furthermore, Allegro displays remarkable generalization to
+              out-of-distribution data. Molecular dynamics simulations based on Allegro recover structural and kinetic
+              properties of an amorphous phosphate electrolyte in excellent agreement with first principles
+              calculations. Finally, we demonstrate the parallel scaling of Allegro with a dynamics simulation of 100
+              million atoms.
             </p>
           </div>
 
@@ -475,64 +463,131 @@
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
-                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2202.13013"
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2202.13060"
                    target="_blank">
-                  Sign and Basis Invariant Networks for Spectral Graph Representation Learning (2022)
+                  Graph Attention Retrospective (2022)
                 </a></h3>
             </div>
             <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
               <div>
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                12th of April 2022
+                19th of April 2022
               </div>
               <div>
                 <a>
                   <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Derek Lim, Joshua Robinson, Lingxiao Zhao, Tess Smidt, Suvrit Sra, Haggai Maron, Stefanie Jegelka
+                  Kimon Fountoulakis, Amit Levi, Shenghao Yang, Aseem Baranwal, Aukosh Jagannath
                 </a>
               </div>
             </div>
             <div>
-              <iframe ngClass.gt-sm="float-right" [src]='safeURLSignNet' allowfullscreen></iframe>
+              <iframe ngClass.gt-sm="float-right" [src]='safeURLGATRetro' allowfullscreen></iframe>
               <p class="paragraph">
                 <a class="slight-bold">Resources:</a>
                 Their <a class="item-subtitle link-style-black"
-                                   href="https://hannes-stark.com/assets/final_reading_group_slides.pdf"
-                                   target="_blank">slides</a>. (96 participants)
+                         href="https://hannes-stark.com/assets/.pdf"
+                         target="_blank">slides</a>. (86 participants)
               </p>
               <p class="paragraph">
                 <a class="slight-bold">Speaker:</a>
-                First authors <a
+                First author Professor <a
                 class="item-subtitle link-style-black"
-                href="https://cptq.github.io/"
-                target="_blank">Derek Lim</a> and <a
-                class="item-subtitle link-style-black"
-                href="https://joshrobinson.mit.edu/"
-                target="_blank">Joshua Robinson</a>, who both are PhD students in the group of Prof. Stefanie Jegelka at
-                MIT. Josh is also co-advised by Prof. Suvrit Sra and Derek previously presented ESAN in the reading
-                group!
+                href="https://opallab.ca/team/"
+                target="_blank">Kimon Fountoulakis</a> who works at the University of Waterloo and previously did a
+                PostDoc at Berkeley after finishing his PhD at University of Edinburgh with Prof. Gondzio.
               </p>
               <p class="no-margin">
                 <a class="slight-bold">Abstract:</a>
-                Many machine learning tasks involve processing eigenvectors derived from data. Especially valuable are
-                Laplacian eigenvectors, which capture useful structural information about graphs and other geometric
-                objects. However, ambiguities arise when computing eigenvectors: for each eigenvector v, the sign
-                flipped
-                −v is also an eigenvector. More generally, higher dimensional eigenspaces contain infinitely many
-                choices
-                of basis eigenvectors. These ambiguities make it a challenge to process eigenvectors and eigenspaces in
-                a
-                consistent way. In this work we introduce SignNet and BasisNet -- new neural architectures that are
-                invariant to all requisite symmetries and hence process collections of eigenspaces in a principled
-                manner.
-                Our networks are universal, i.e., they can approximate any continuous function of eigenvectors with the
-                proper invariances. They are also theoretically strong for graph representation learning -- they can
-                approximate any spectral graph convolution, can compute spectral invariants that go beyond message
-                passing
-                neural networks, and can provably simulate previously proposed graph positional encodings. Experiments
-                show the strength of our networks for learning spectral graph filters and learning graph positional
-                encodings.
+                Graph-based learning is a rapidly growing sub-field of machine learning with applications in social
+                networks, citation networks, and bioinformatics. One of the most popular type of models is graph
+                attention
+                networks. These models were introduced to allow a node to aggregate information from the features of
+                neighbor nodes in a non-uniform way in contrast to simple graph convolution which does not distinguish
+                the
+                neighbors of a node. In this paper, we study theoretically this expected behaviour of graph attention
+                networks. We prove multiple results on the performance of the graph attention mechanism for the problem
+                of
+                node classification for a contextual stochastic block model. Here the features of the nodes are obtained
+                from a mixture of Gaussians and the edges from a stochastic block model where the features and the edges
+                are coupled in a natural way. First, we show that in an "easy" regime, where the distance between the
+                means of the Gaussians is large enough, graph attention maintains the weights of intra-class edges and
+                significantly reduces the weights of the inter-class edges. As a corollary, we show that this implies
+                perfect node classification independent of the weights of inter-class edges. However, a classical
+                argument
+                shows that in the "easy" regime, the graph is not needed at all to classify the data with high
+                probability. In the "hard" regime, we show that every attention mechanism fails to distinguish
+                intra-class
+                from inter-class edges. We evaluate our theoretical results on synthetic and real-world data.
               </p>
+            </div>
+
+            <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+
+            <div class="item" fxLayout="column">
+              <div fxLayout="row">
+                <h3>
+                  <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2202.13013"
+                     target="_blank">
+                    Sign and Basis Invariant Networks for Spectral Graph Representation Learning (2022)
+                  </a></h3>
+              </div>
+              <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+                <div>
+                  <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                  12th of April 2022
+                </div>
+                <div>
+                  <a>
+                    <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                    Derek Lim, Joshua Robinson, Lingxiao Zhao, Tess Smidt, Suvrit Sra, Haggai Maron, Stefanie Jegelka
+                  </a>
+                </div>
+              </div>
+              <div>
+                <iframe ngClass.gt-sm="float-right" [src]='safeURLSignNet' allowfullscreen></iframe>
+                <p class="paragraph">
+                  <a class="slight-bold">Resources:</a>
+                  Their <a class="item-subtitle link-style-black"
+                           href="https://hannes-stark.com/assets/final_reading_group_slides.pdf"
+                           target="_blank">slides</a>. (96 participants)
+                </p>
+                <p class="paragraph">
+                  <a class="slight-bold">Speaker:</a>
+                  First authors <a
+                  class="item-subtitle link-style-black"
+                  href="https://cptq.github.io/"
+                  target="_blank">Derek Lim</a> and <a
+                  class="item-subtitle link-style-black"
+                  href="https://joshrobinson.mit.edu/"
+                  target="_blank">Joshua Robinson</a>, who both are PhD students in the group of Prof. Stefanie Jegelka
+                  at
+                  MIT. Josh is also co-advised by Prof. Suvrit Sra and Derek previously presented ESAN in the reading
+                  group!
+                </p>
+                <p class="no-margin">
+                  <a class="slight-bold">Abstract:</a>
+                  Many machine learning tasks involve processing eigenvectors derived from data. Especially valuable are
+                  Laplacian eigenvectors, which capture useful structural information about graphs and other geometric
+                  objects. However, ambiguities arise when computing eigenvectors: for each eigenvector v, the sign
+                  flipped
+                  −v is also an eigenvector. More generally, higher dimensional eigenspaces contain infinitely many
+                  choices
+                  of basis eigenvectors. These ambiguities make it a challenge to process eigenvectors and eigenspaces
+                  in
+                  a
+                  consistent way. In this work we introduce SignNet and BasisNet -- new neural architectures that are
+                  invariant to all requisite symmetries and hence process collections of eigenspaces in a principled
+                  manner.
+                  Our networks are universal, i.e., they can approximate any continuous function of eigenvectors with
+                  the
+                  proper invariances. They are also theoretically strong for graph representation learning -- they can
+                  approximate any spectral graph convolution, can compute spectral invariants that go beyond message
+                  passing
+                  neural networks, and can provably simulate previously proposed graph positional encodings. Experiments
+                  show the strength of our networks for learning spectral graph filters and learning graph positional
+                  encodings.
+                </p>
+              </div>
             </div>
           </div>
 
