--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -70,7 +70,7 @@
           <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
             <div fxFlex.gt-sm="200px" fxFlex.lt-md="100" ngClass.gt-sm="underline-title" ngClass.lt-md=""
                  fxLayoutAlign.lt-md="center center">
-              <h1 class="left-titles">PAPERS</h1>
+              <h1 class="left-titles">MAIN PAPERS</h1>
             </div>
           </div>
           <div fxFlex="60">
@@ -84,7 +84,7 @@
 
       <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title"
            fxLayoutAlign="center center">
-        <h1 class="left-titles">PAPERS</h1>
+        <h1 class="left-titles">MAIN PAPERS</h1>
       </div>
 
       <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column"
