--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -484,8 +484,8 @@
               <iframe ngClass.gt-sm="float-right" [src]='safeURLGATRetro' allowfullscreen></iframe>
               <p class="paragraph">
                 <a class="slight-bold">Resources:</a>
-                Their <a class="item-subtitle link-style-black"
-                         href="https://hannes-stark.com/assets/.pdf"
+                Kimon's <a class="item-subtitle link-style-black"
+                         href="https://hannes-stark.com/assets/kimon.pdf"
                          target="_blank">slides</a>. (86 participants)
               </p>
               <p class="paragraph">
